[project]
name = "langgraph-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3.0",
    "langgraph>=0.1.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }
